# resume-tui

./: .gitignore  Cargo.toml  README.md  browser.d.ts  browser.js  browser_bg.wasm  browser_bg.wasm.d.ts  build-browser-dev.sh  build.rs  changelog.rss  dist-workspace.toml  index.html  license.txt  oranda.json  resume.toml
.github/workflows/: publish-site.yml  release.yml
browser/: Cargo.toml  index.html  license.txt
browser/public/: index.html
browser/src/: lib.rs  ratatui_wrapper.rs
changelog/: index.html
changelog/v0.0.1/: index.html
changelog/v0.0.2/: index.html
changelog/v0.0.3/: index.html
changelog/v0.0.4/: index.html
data/: edu.toml  info.toml  jobs.toml  oss.toml
data/job_details/Company Name/: 1.toml
data/job_details/SmartThings/: 1.toml  2.toml  3.toml  4.toml  5.toml  6.toml  7.toml
data/job_details/Solution Design Group/: 1.toml  2.toml  5.toml
data/job_details/United Subcontractors/: 1.toml  2.toml
data/job_details/job1/: 1.toml  2.toml
data/oss_details/Cosock/: luncheon.toml  lustre.toml  luxure.toml
data/oss_details/Project 2/: 1.toml  2.toml
data/oss_details/Rusty ECMA/: 1.toml  2.toml  3.toml  4.toml  5.toml
data/oss_details/proj-1/: sub-proj1.toml
live-preview/: browser_bg.wasm  index.html
resume-tui-data/: Cargo.toml
resume-tui-data/src/: codegen.rs  lib.rs
src/: data.rs  detail_view.rs  edu.rs  lib.rs  list_state.rs  main.rs  markdown.rs  oss.rs  work.rs
src/snapshots/: resume_tui__markdown__test__convert_markdown.snap  resume_tui__markdown__test__convert_markdown_bock_quote.snap  resume_tui__markdown__test__convert_markdown_breaks.snap  resume_tui__markdown__test__convert_markdown_one_line.snap
to_pdf/: Cargo.toml
to_pdf/src/: lib.rs  wrapper.rs
wix/: main.wxs
