[package]
name = "resume-tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27"
color-eyre = "0.6"
log = "0.4"
phf = { version = "0.11", features = ["macros"] }
pulldown-cmark = "0.10"
ratatui = "0.26"
env_logger = { version = "0.11", optional = true }

[dev-dependencies]
insta = "1.36"
env_logger = "0.11"

[build-dependencies]
proc-macro2 = { version = "1", features = []}
quote = { version = "1.0", features = [] }
serde = { version = "1", features = ["derive"] }
syn = { version = "2.0", features = [] }
toml = "0.8"

[features]
default = []
logging = ["dep:env_logger"]
