[package]
name = "resume-tui"
version = "0.0.1"
edition = "2021"
repository = "https://github.com/FreeMasen/resume-tui"
authors = ["Robert Masen <r.f.masen@gmail.com>"]
description = "My resume as a TUI application"

[package.metadata.wix]
upgrade-guid = "B050A522-06FC-432E-B378-BFCF6C47F3B7"
path-guid = "1ED758D5-D16C-44F3-B9C5-CB42E045CB08"
license = false
eula = false

[dependencies]
crossterm = "0.27"
color-eyre = "0.6"
log = "0.4"
pulldown-cmark = "0.10"
ratatui = "0.26"
env_logger = { version = "0.11", optional = true }

[dev-dependencies]
insta = "1.36"
env_logger = "0.11"

[build-dependencies]
proc-macro2 = { version = "1", features = []}
quote = { version = "1.0", features = [] }
serde = { version = "1", features = ["derive"] }
syn = { version = "2.0", features = [] }
toml = "0.8"

[features]
default = []
logging = ["dep:env_logger"]

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.11.1"
# The installers to generate for each app
installers = ["shell", "powershell", "msi"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
# CI backends to support
ci = ["github"]
# Publish jobs to run in CI
pr-run-mode = "upload"
