[package]
name = "resume-tui"
version = "0.0.4"
edition = "2021"
repository = "https://github.com/FreeMasen/resume-tui"
authors = ["Robert Masen <r.f.masen@gmail.com>"]
description = "My resume as a TUI application"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
crossterm = { version = "0.28", optional = true }
color-eyre = "0.6"
log = "0.4"
pulldown-cmark = "0.12"
ratatui = { version = "0.29", default-features = false }
env_logger = { version = "0.11", optional = true }
thiserror = "2"

[dev-dependencies]
insta = "1.36"
env_logger = "0.11"

[build-dependencies]
log = "0.4"
env_logger = "0.11"
proc-macro2 = { version = "1", features = []}
quote = { version = "1.0", features = [] }
serde = { version = "1", features = ["derive"] }
syn = { version = "2.0", features = [] }
toml = "0.8"

[features]
default = ["crossterm"]
logging = ["dep:env_logger"]
crossterm = ["dep:crossterm", "ratatui/crossterm"]


[workspace]
exclude = ["browser"]

[package.metadata.wix]
upgrade-guid = "B050A522-06FC-432E-B378-BFCF6C47F3B7"
path-guid = "1ED758D5-D16C-44F3-B9C5-CB42E045CB08"
license = false
eula = false

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
