[package]
name = "browser"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_rgb = "0.2.0"
console_error_panic_hook = "0.1.5"
js-sys = "0.3.37"
log = {version = "0.4", features = ["std"] }
ratatui = { version = "0.26", default-features = false, features = []}
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console"] }

[dependencies.resume-tui]
# git = "https://github.com/FreeMasen/resume-tui"
# tag = "v0.0.3"
path = "../"
default-features = false

[lib]
crate-type = ["cdylib"]
