[package]
name = "to_pdf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
resume-tui = { path = "../" }
tempfile = "3.10"
serde_yaml = "0.9"
printpdf = {version = "0.7", features = ["svg"] }
owned_ttf_parser = "0.21"
